# nonlinear-dynamics

./: .gitignore  README.md  pyproject.toml
nonlinear_dynamics/: functions.py  plotting.py  script.py
nonlinear_dynamics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
